[package]
name = "webdev_derive"
version = "0.1.0"
authors = ["root"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
rouille = "3.0.0"
diesel = { version = "1.3.3", features = ["mysql"] }
diesel_migrations = "1.4.0"
dotenv = "0.13.0"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
log = "0.4"
simplelog = "0.5"
url="1.7.2"
csv = "1.0.5"
syn = "0.15.32"
quote = "0.6.12"
backend_support = { path = "../backend_support"}
